--- a/BlazorMovie/Components/Pages/MoviePageComponent.razor
+++ b/BlazorMovie/Components/Pages/MoviePageComponent.razor
@@ -8,14 +8,15 @@
 @using BlazorMovie.Services.Interfaces
 @using System.Web;
 
-@inject MovieCacheService MovieCacheService
-@inject IMovieServiceFactory MovieServiceFactory
+@inject MovieCacheService movieCacheService
+@inject IMovieServiceFactory movieServiceFactory
+@inject ISearchMovieService searchMovieService
 @inject NavigationManager navManager
 
 <MovieListComponent TMovie="Movie"
-                    movies="@movies"
-                    Title="@Title"
-                    OnPageChanged="GetPage" />
+movies="@movies"
+Title="@Title"
+OnPageChanged="GetPage" />
 
 @code {
     private PageResponse<Movie>? movies;
@@ -23,6 +24,9 @@
     #region PARAMETERS
     [Parameter]
     public string Category { get; set; } = "popular";
+
+    [SupplyParameterFromQuery]
+    public string? Query { get; set; }
 
     [SupplyParameterFromQuery]
     public string SearchQuery { get; set; } = string.Empty;
@@ -37,15 +41,19 @@
         "now_playing" => "Now Playing",
         "upcoming" => "Coming Soon",
         "top_rated" => "Top Rated",
-        "search_results" => "Search Results",
+        "search_result" => "Search Results",
         _ => "Popular Movies"
     };
     #endregion
 
     #region ON INITIALIZED
-    protected override void OnInitialized()
+    protected override async Task OnInitializedAsync()
     {
-        var uri = new Uri(navManager.Uri); // navManager is the injected NavigationManager
+        if (!string.IsNullOrEmpty(Query))
+        {
+            movies = await searchMovieService.GetMoviesAsync(Page, SearchQuery);
+        }
+            var uri = new Uri(navManager.Uri); // navManager is the injected NavigationManager
         var queryString = uri.Query;
 
         // Use System.Web.HttpUtility to parse the query string
@@ -53,17 +61,35 @@
         var searchQuery = queryParameters["searchQuery"];
 
         // Use searchQuery
-        Console.WriteLine($"Search Query: {searchQuery}");
+        Console.WriteLine($"SearchQuery: {SearchQuery}, Page: {Page}");
+
     }
     #endregion
 
     #region ON PARAMETERS SET ASYNC
     protected override async Task OnParametersSetAsync()
     {
-        Console.WriteLine($"From Movie Page: Category: {Category}, Page: {Page}");
-        var movieService = MovieServiceFactory.GetService(Category);
-        movies = await FetchMoviesAsync(movieService, Page);
+        Console.WriteLine($"From Movie Page: Category: {Category}, Page: {Page}, SearchQuery: {SearchQuery}");
+
+        if (Category == "search_result")
+        {
+            if (string.IsNullOrWhiteSpace(SearchQuery))
+            {
+                Console.WriteLine("Error: SearchQuery is empty!");
+                return; // Prevent execution if the query is invalid
+            }
+
+            var searchMovieService = movieServiceFactory.GetService("search_result");
+            movies = await FetchMoviesAsync(searchMovieService, Page);
+        }
+        else
+        {
+            var movieService = movieServiceFactory.GetService(Category);
+            movies = await FetchMoviesAsync(movieService, Page);
+        }
     }
+
+
     #endregion
 
     #region FETCH MOVIES
@@ -71,7 +97,7 @@
     {
         if (movieService is ISearchMovieService searchMovieService)
         {
-            return await MovieCacheService.GetOrFetchMoviesAsync(
+            return await movieCacheService.GetOrFetchMoviesAsync(
                 (p) => searchMovieService.GetMoviesAsync(p, SearchQuery),
                 $"{Category}Page",
                 page
@@ -80,7 +106,7 @@
         else if (movieService is IMovieService generalMovieService)
         {
             //First, check if response is already cashed
-            return await MovieCacheService.GetOrFetchMoviesAsync(
+            return await movieCacheService.GetOrFetchMoviesAsync(
                 //If not, make API call and cashe the response
                 (p) => generalMovieService.GetMoviesAsync(p),
                 $"{Category}Page",
