Revert "minor changes to MainSearchComponent and MoviePageComponent"
This reverts commit 0d292a7e9a70d2d8953311a6e0dcf189bde10243.

--- a/BlazorMovie/Components/UIComponents/SearchComponents/MainSearchComponent.razor
+++ b/BlazorMovie/Components/UIComponents/SearchComponents/MainSearchComponent.razor
@@ -162,7 +162,7 @@
                 NavManager.NavigateTo($"/search_result?SearchQuery={HttpUtility.UrlEncode(searchQuery)}&Page=1");
 
                 // Reset dropdown after searching
-                dropdownComponent?.ResetDropdown();
+                // dropdownComponent?.ResetDropdown();
             }
             else
             {
