--- a/BlazorMovie/Components/Pages/MovieDetailsPage.razor
+++ b/BlazorMovie/Components/Pages/MovieDetailsPage.razor
@@ -20,10 +20,12 @@ else
                 <div class="mt-3 text-center text-md-end pe-3">
                     <h1 class="text-light">@movieDetails?.Title?.ToUpper()</h1>
                     <h2 class="text-light">@movieDetails?.Tagline</h2>
-                    @if (DateTime.TryParse(movieDetails?.ReleaseDate, out DateTime releaseDate))
-                    {
-                        <span class="badge me-2 releaseDate" title="Release Date">@releaseDate.ToString("MMM dd, yyyy")</span>
-                    }
+                    <span class="badge me-2 releaseDate" title="Release Date">
+                        @(DateTime.TryParse(movieDetails?.ReleaseDate, out DateTime releaseDate)
+                            ? $"{releaseDate:MMM dd, yyyy}"
+                            : "Release Date Not Available")
+                    </span>
+
                     @{
                         var runtime = movieDetails !=null ? $"{movieDetails?.Runtime / 60}h {movieDetails?.Runtime % 60}m" : "Runtime Not Available";
                         var rating = movieDetails !=null ? (movieDetails.VoteAverage * 10).ToString("F1"): "Rating Not Available";
@@ -44,13 +46,13 @@ else
                                 else if (isLinkAvailable == false)
                                 {
                                     <div class="text-center px-2">
-                                        <button class="btn btn-outline-light rounded-pill" title="Website not found" disabled>Website Unavailable</button>
+                                        <button class="btn btn-outline-light rounded-pill" title="Website not found" >Website Unavailable</button>
                                     </div>
                                 }
                                 else
                                 {
                                     <div class="text-center px-2">
-                                        <span>Checking link...</span>
+                                        <span class="text-light">Checking link...</span>
                                     </div>
                                 }
                             }
@@ -71,7 +73,7 @@ else
                 <div class="poster-container">
                     @if (string.IsNullOrEmpty(movieDetails?.PosterPath))
                     {
-                        <img src="/img/PosterPlaceHolder.png" alt="Movie Poster" />
+                        <img src="/img/PosterPlaceHolder.png" alt="Movie Poster" title="Movie Poster" />
                     }
                     else
                     {
@@ -117,7 +119,7 @@ else
     
     protected override async Task OnParametersSetAsync()
     {
-        if (!string.IsNullOrEmpty(movieDetails.Homepage))
+        if (!string.IsNullOrEmpty(movieDetails?.Homepage))
         {
             isLinkAvailable = await IsLinkAvailable(movieDetails.Homepage);
         }
