--- a/BlazorMovie/wwwroot/css/app.css
+++ b/BlazorMovie/wwwroot/css/app.css
@@ -14,6 +14,7 @@
     --sjw-font-size: 1rem;
     /*box shadow*/
     --sjw-box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
+    --sjw-box-shadow2: rgba(0, 0, 0, 0.15) 0px 5px 10px, rgba(0, 0, 0, 0.18) 0px 3px 3px;
 }
 
 html, body {
