--- a/BlazorMovie/Components/Pages/MovieDetailsPage.razor
+++ b/BlazorMovie/Components/Pages/MovieDetailsPage.razor
@@ -18,8 +18,11 @@ else
             <!--title content goes here-->
             <div class="flex-grow-1 d-flex align-items-center justify-content-center justify-content-md-end">
                 <div class="mt-3 text-center text-md-end pe-3">
-                    <h1 class="text-light">@movieDetails?.Title?.ToUpper()</h1>
-                    <h2 class="text-light">@movieDetails?.Tagline</h2>
+                    <h1 class="text-light">@((movieDetails?.Title != null) ? movieDetails.Title.ToUpper() 
+                        : "Title Not Available")</h1>
+                        <h2 class="text-light">@((movieDetails?.Tagline != null) ? movieDetails.Tagline 
+                        : "Tagline Not Available")</h2>
+
                     <span class="badge me-2 releaseDate" title="Release Date">
                         @(DateTime.TryParse(movieDetails?.ReleaseDate, out DateTime releaseDate)
                             ? $"{releaseDate:MMM dd, yyyy}"
@@ -86,19 +89,50 @@ else
     </div>
     <div class="container-xxl">
         <div class="overview d-flex flex-column">
-            <p>@movieDetails?.Overview</p>
-            @if (movieDetails.SpokenLanguages.Any())
-            {
-                <div>
-                    <strong> Languages:</strong> @string.Join(", ", movieDetails.SpokenLanguages.Select(sl => sl.EnglishName))
+            <p>
+                @((movieDetails?.Overview != null) ? movieDetails.Overview
+                    : "Overview Summary Not Available")
+            </p>
+
+            <div class="row mb-2">
+                <!-- Language and Genres -->
+                <div class="col-6 text-start">
+                    <strong>Language:</strong>
+                    @(movieDetails?.SpokenLanguages?.Any() == true
+                        ? string.Join(", ", movieDetails.SpokenLanguages.Select(sl => sl.EnglishName))
+                        : "Not Available")
                 </div>
-            }
-            else
-            {
-                <div>
-                    <strong> Languages:</strong> Not Available
+                <div class="col-6 text-end">
+                    <strong class="me-2">Genres:</strong>
+                    @if (movieDetails?.Genres?.Any() == true)
+                    {
+                        @foreach (var genre in movieDetails.Genres)
+                        {
+                            <span class="badge genre me-2">@genre.Name</span>
+                        }
+                    }
+                    else
+                    {
+                        <span>Genres Not Available</span>
+                    }
                 </div>
-            }
+            </div>
+
+            <div class="row mb-2">
+                <!-- Revenue and Budget -->
+                <div class="col-6 text-start">
+                    <strong>Revenue:</strong>
+                    @((movieDetails?.Revenue != null)
+                        ? @movieDetails.Revenue.ToString("C", new System.Globalization.CultureInfo("en-US"))
+                        : "Revenue Not Available")
+                </div>
+                <div class="col-6 text-end">
+                    <strong>Budget:</strong>
+                    @((movieDetails?.Budget != null)
+                        ? @movieDetails.Budget.ToString("C", new System.Globalization.CultureInfo("en-US"))
+                        : "Budget Not Available")
+                </div>
+            </div>
 
         </div>
     </div>
