--- a/BlazorMovie/Components/UIComponents/GenreListComponent.razor.css
+++ b/BlazorMovie/Components/UIComponents/GenreListComponent.razor.css
@@ -1,7 +1,12 @@
 ﻿.genre {
+   /* color: var(--sjw-footer-font-color);*/
     background-color: var(--sjw-golden-color);
     color: var(--sjw-secondary-color);
-    font-weight: 900;
+    font-size: 1rem;
+    font-weight: 800;
+    border: 2px solid;
+    border-color: var(--sjw-footer-font-color);
+    border-radius: 2rem;
     flex: 1 1 calc(33.333% - 1rem); /* Each badge takes 1/3 of the row minus spacing */
     text-align: center;
     box-shadow: var(--sjw-box-shadow2);
@@ -15,6 +20,7 @@
 @media (max-width: 768px) {
     .genre {
         flex: 1 1 calc(50% - 1rem); /* Reduce to 2 badges per row on small screens */
+        font-size: 0.5rem;
     }
 }
 
