--- a/BlazorMovie/Components/UIComponents/SearchComponents/MainSearchComponent.razor
+++ b/BlazorMovie/Components/UIComponents/SearchComponents/MainSearchComponent.razor
@@ -21,12 +21,7 @@
     </div>
 </div>
 
-@if (!string.IsNullOrWhiteSpace(errorMessage))
-{
-    <div class="alert alert-danger mt-3" role="alert">
-        @errorMessage
-    </div>
-}
+<ErrorMessageComponent Message="@errorMessage" />
 
 @code {
     #region PARAMETERS
@@ -57,8 +52,6 @@
     private SearchModel searchModel { get; set; } = new SearchModel();
     public NavigationManager NavigationManager { get; set; } = null!;
 
-    private string ErrorMessage { get; set; } = string.Empty;
-
     #region CATEGORY CHANGED
     private void OnCategoryChanged(ChangeEventArgs e)
     {
@@ -84,7 +77,7 @@
 
         if (searchResults?.Results == null || !searchResults.Results.Any())
         {
-            await ShowErrorMessage("No results found.");
+            errorMessage = "No results found.";
             return;
         }
         // Navigate to the search results page
@@ -106,7 +99,7 @@
         catch (Exception ex)
         {
             Console.WriteLine($"Error fetching search results: {ex.Message}");
-            await ShowErrorMessage("An error occurred while fetching search results.");
+            errorMessage = "An error occurred while fetching search results.";
         }
     }
     #endregion
@@ -153,25 +146,18 @@
     }
     #endregion
 
-    #region SHOW ERROR MESSAGE
-    private async Task ShowErrorMessage(string message)
-    {
-        ErrorMessage = message;
-        StateHasChanged();
-
-        await Task.Delay(1500);
-
-        ErrorMessage = string.Empty;
-        StateHasChanged();
-    }
-    #endregion
+    
 
     #region VALIDATE SEARCH
     private async Task<bool> ValidateSearchTerm()
     {
         if (string.IsNullOrWhiteSpace(searchTerm))
         {
-            await ShowErrorMessage("Please enter a search term.");
+            errorMessage = "Please enter a search term.";
+            StateHasChanged();
+            await Task.Delay(1500);
+            errorMessage = string.Empty;
+            StateHasChanged();
             return false;
         }
         return true;
