Modified SearchBoxInputComponent to accomodate ErrorMessageComponent ; added a few minor formatting corrections.

--- a/BlazorMovie/Components/UIComponents/SearchComponents/DropdownComponent.razor
+++ b/BlazorMovie/Components/UIComponents/SearchComponents/DropdownComponent.razor
@@ -1,4 +1,5 @@
-﻿<div class="@animationClass">
+﻿@*DropdownComponent*@
+<div class="@animationClass">
     <select class="form-select dropdownSelect" @onchange="OnCategoryChanged" value="@SelectedCategory">
         <option value="">Search</option>
         <option value="MovieByTitle">Movie By Title</option>
