--- a/BlazorMovie/Components/Pages/MoviePageComponent.razor
+++ b/BlazorMovie/Components/Pages/MoviePageComponent.razor
@@ -1,4 +1,5 @@
-﻿@page "/{category}"
+﻿@*MOVIE PAGE COMPONENT*@
+@page "/{category}"
 @page "/"
 @page "/search"
 
@@ -97,9 +98,13 @@ OnPageChanged="GetPage" />
     {
         if (movieService is ISearchMovieService searchMovieService)
         {
+            // Include SearchQuery in the cache key to differentiate search results
+            string cacheKey = $"{Category}Page_{SearchQuery}_{page}";
+
             return await movieCacheService.GetOrFetchMoviesAsync(
                 (p) => searchMovieService.GetMoviesAsync(p, SearchQuery),
-                $"{Category}Page",
+                // $"{Category}Page",
+                cacheKey,
                 page
             );
         }
